# dragon-api

./: .env.example  Cargo.toml  LICENSE
src/: datastruct.rs  main.rs
src/graphql/: fights.rs  mod.rs  schema.json
src/graphql/queries/: fights.graphql
src/state/: mod.rs  reciver.rs  structs.rs
src/web_api/: mod.rs  routes.rs  structs.rs
