[package]
name = "dragon-api"
version = "0.0.15"
authors = ["Igor-Khan <khanigot@gmil.com>"]
description = "API server for dragonzil"
repository = "https://github.com/DeepDragons/dragon-api"
license = "MIT"
keywords = ["web", "api", "tide", "zilliqa", "blockchain"]
edition = "2021"
publish = false

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tide = "0.16"
dotenv = "0.15"

